azurermps/4.0.0/AzureRM.ApiManagement/index.md
---
Module Name: Microsoft.Azure.Commands.ApiManagement.ServiceManagement
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Locale: en-US
ms.assetid: 79B770C8-C2F3-4173-A419-4C350A1B542A
updated_at: 05/11/2017 18:05 PM
ms.date: 05/11/2017
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.ApiManagement/v4.0.0/Microsoft.Azure.Commands.ApiManagement.ServiceManagement.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.ApiManagement/v4.0.0/Microsoft.Azure.Commands.ApiManagement.ServiceManagement.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/a9b160b3b332c6a38589f1828b17cf2391c2454e
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: true
ms.service: api-Management
Add-AzureRmApiManagementApiToProduct: API Management
Add-AzureRmApiManagementProductToGroup: API Management
Add-AzureRmApiManagementRegion: API Management
Add-AzureRmApiManagementUserToGroup: API Management
Backup-AzureRmApiManagement: API Management
Export-AzureRmApiManagementApi: API Management
Get-AzureRmApiManagement: API Management
Get-AzureRmApiManagementApi: API Management
Get-AzureRmApiManagementAuthorizationServer: API Management
Get-AzureRmApiManagementBackend: API Management
Get-AzureRmApiManagementCertificate: API Management
Get-AzureRmApiManagementGroup: API Management
Get-AzureRmApiManagementIdentityProvider: API Management
Get-AzureRmApiManagementLogger: API Management
Get-AzureRmApiManagementOpenIdConnectProvider: API Management
Get-AzureRmApiManagementOperation: API Management
Get-AzureRmApiManagementPolicy: API Management
Get-AzureRmApiManagementProduct: API Management
Get-AzureRmApiManagementProperty: API Management
Get-AzureRmApiManagementSsoToken: API Management
Get-AzureRmApiManagementSubscription: API Management
Get-AzureRmApiManagementTenantAccess: API Management
Get-AzureRmApiManagementTenantGitAccess: API Management
Get-AzureRmApiManagementTenantSyncState: API Management
Get-AzureRmApiManagementUser: API Management
Get-AzureRmApiManagementUserSsoUrl: API Management
Import-AzureRmApiManagementApi: API Management
Import-AzureRmApiManagementHostnameCertificate: API Management
New-AzureRmApiManagement: API Management
New-AzureRmApiManagementApi: API Management
New-AzureRmApiManagementAuthorizationServer: API Management
New-AzureRmApiManagementBackend: API Management
New-AzureRmApiManagementBackendCredential: API Management
New-AzureRmApiManagementBackendProxy: API Management
New-AzureRmApiManagementCertificate: API Management
New-AzureRmApiManagementContext: API Management
New-AzureRmApiManagementGroup: API Management
New-AzureRmApiManagementHostnameConfiguration: API Management
New-AzureRmApiManagementIdentityProvider: API Management
New-AzureRmApiManagementLogger: API Management
New-AzureRmApiManagementOpenIdConnectProvider: API Management
New-AzureRmApiManagementOperation: API Management
New-AzureRmApiManagementProduct: API Management
New-AzureRmApiManagementProperty: API Management
New-AzureRmApiManagementRegion: API Management
New-AzureRmApiManagementSubscription: API Management
New-AzureRmApiManagementUser: API Management
New-AzureRmApiManagementVirtualNetwork: API Management
Publish-AzureRmApiManagementTenantGitConfiguration: API Management
Remove-AzureRmApiManagement: API Management
Remove-AzureRmApiManagementApi: API Management
Remove-AzureRmApiManagementApiFromProduct: API Management
Remove-AzureRmApiManagementAuthorizationServer: API Management
Remove-AzureRmApiManagementBackend: API Management
Remove-AzureRmApiManagementCertificate: API Management
Remove-AzureRmApiManagementGroup: API Management
Remove-AzureRmApiManagementIdentityProvider: API Management
Remove-AzureRmApiManagementLogger: API Management
Remove-AzureRmApiManagementOpenIdConnectProvider: API Management
Remove-AzureRmApiManagementOperation: API Management
Remove-AzureRmApiManagementPolicy: API Management
Remove-AzureRmApiManagementProduct: API Management
Remove-AzureRmApiManagementProductFromGroup: API Management
Remove-AzureRmApiManagementProperty: API Management
Remove-AzureRmApiManagementRegion: API Management
Remove-AzureRmApiManagementSubscription: API Management
Remove-AzureRmApiManagementUser: API Management
Remove-AzureRmApiManagementUserFromGroup: API Management
Restore-AzureRmApiManagement: API Management
Save-AzureRmApiManagementTenantGitConfiguration: API Management
Set-AzureRmApiManagementApi: API Management
Set-AzureRmApiManagementAuthorizationServer: API Management
Set-AzureRmApiManagementBackend: API Management
Set-AzureRmApiManagementCertificate: API Management
Set-AzureRmApiManagementGroup: API Management
Set-AzureRmApiManagementHostnames: API Management
Set-AzureRmApiManagementIdentityProvider: API Management
Set-AzureRmApiManagementLogger: API Management
Set-AzureRmApiManagementOpenIdConnectProvider: API Management
Set-AzureRmApiManagementOperation: API Management
Set-AzureRmApiManagementPolicy: API Management
Set-AzureRmApiManagementProduct: API Management
Set-AzureRmApiManagementProperty: API Management
Set-AzureRmApiManagementSubscription: API Management
Set-AzureRmApiManagementTenantAccess: API Management
Set-AzureRmApiManagementUser: API Management
Update-AzureRmApiManagementDeployment: API Management
Update-AzureRmApiManagementRegion: API Management
_isModulePage: true
---

# Microsoft.Azure.Commands.ApiManagement.ServiceManagement Module
## Description
This topic displays help topics for the Azure cmdlets for Microsoft API Management.

## Microsoft.Azure.Commands.ApiManagement.ServiceManagement Cmdlets
### [Add-AzureRmApiManagementApiToProduct](./Add-AzureRmApiManagementApiToProduct.md)
Adds an API to a product.


### [Add-AzureRmApiManagementProductToGroup](./Add-AzureRmApiManagementProductToGroup.md)
Adds a product to a group.


### [Add-AzureRmApiManagementUserToGroup](./Add-AzureRmApiManagementUserToGroup.md)
Adds a user to a group.


### [Export-AzureRmApiManagementApi](./Export-AzureRmApiManagementApi.md)
Exports an API to a file.


### [Get-AzureRmApiManagementApi](./Get-AzureRmApiManagementApi.md)
Gets an API.


### [Get-AzureRmApiManagementAuthorizationServer](./Get-AzureRmApiManagementAuthorizationServer.md)
Gets an API Management authorization server.


### [Get-AzureRmApiManagementCertificate](./Get-AzureRmApiManagementCertificate.md)
Gets API Management certificates.


### [Get-AzureRmApiManagementGroup](./Get-AzureRmApiManagementGroup.md)
Gets all or specific API management groups.


### [Get-AzureRmApiManagementLogger](./Get-AzureRmApiManagementLogger.md)
Gets API Management Logger objects.


### [Get-AzureRmApiManagementOpenIdConnectProvider](./Get-AzureRmApiManagementOpenIdConnectProvider.md)
Gets OpenID Connect providers.


### [Get-AzureRmApiManagementOperation](./Get-AzureRmApiManagementOperation.md)
Gets a list or a specified API Operation.


### [Get-AzureRmApiManagementPolicy](./Get-AzureRmApiManagementPolicy.md)
Gets the specified scope policy.


### [Get-AzureRmApiManagementProduct](./Get-AzureRmApiManagementProduct.md)
Gets a list or a particular product.


### [Get-AzureRmApiManagementProperty](./Get-AzureRmApiManagementProperty.md)



### [Get-AzureRmApiManagementSubscription](./Get-AzureRmApiManagementSubscription.md)
Gets subscriptions.


### [Get-AzureRmApiManagementTenantAccess](./Get-AzureRmApiManagementTenantAccess.md)
Gets the access configuration for a tenant.


### [Get-AzureRmApiManagementTenantGitAccess](./Get-AzureRmApiManagementTenantGitAccess.md)
Gets the Git access configuration for a tenant.


### [Get-AzureRmApiManagementTenantSyncState](./Get-AzureRmApiManagementTenantSyncState.md)
Gets the status of the most recent synchronization between the configuration database and the Git repository.


### [Get-AzureRmApiManagementUserSsoUrl](./Get-AzureRmApiManagementUserSsoUrl.md)
Generates an SSO URL for a user.


### [Get-AzureRmApiManagementUser](./Get-AzureRmApiManagementUser.md)
Gets a user or users.


### [Import-AzureRmApiManagementApi](./Import-AzureRmApiManagementApi.md)
Imports an API from a file or a URL.


### [New-AzureRmApiManagementApi](./New-AzureRmApiManagementApi.md)
Creates an API.


### [New-AzureRmApiManagementAuthorizationServer](./New-AzureRmApiManagementAuthorizationServer.md)
Creates an authorization server.


### [New-AzureRmApiManagementCertificate](./New-AzureRmApiManagementCertificate.md)
Creates an API Management certificate.


### [New-AzureRmApiManagementContext](./New-AzureRmApiManagementContext.md)
Creates an instance of PsAzureApiManagementContext.


### [New-AzureRmApiManagementGroup](./New-AzureRmApiManagementGroup.md)
Creates an API management group.


### [New-AzureRmApiManagementLogger](./New-AzureRmApiManagementLogger.md)
Creates an API Management Logger.


### [New-AzureRmApiManagementOpenIdConnectProvider](./New-AzureRmApiManagementOpenIdConnectProvider.md)
Creates an OpenID Connect provider.


### [New-AzureRmApiManagementOperation](./New-AzureRmApiManagementOperation.md)
Creates an API management operation.


### [New-AzureRmApiManagementProduct](./New-AzureRmApiManagementProduct.md)
Creates an API Management product.


### [New-AzureRmApiManagementProperty](./New-AzureRmApiManagementProperty.md)
Creates a new Property.


### [New-AzureRmApiManagementSubscription](./New-AzureRmApiManagementSubscription.md)
Creates a subscription.


### [New-AzureRmApiManagementUser](./New-AzureRmApiManagementUser.md)
Registers a new user.


### [Publish-AzureRmApiManagementTenantGitConfiguration](./Publish-AzureRmApiManagementTenantGitConfiguration.md)
Publishes changes from a Git branch to the configuration database.


### [Remove-AzureRmApiManagementApiFromProduct](./Remove-AzureRmApiManagementApiFromProduct.md)
Removes an API from a product.


### [Remove-AzureRmApiManagementApi](./Remove-AzureRmApiManagementApi.md)
Removes an API.


### [Remove-AzureRmApiManagementAuthorizationServer](./Remove-AzureRmApiManagementAuthorizationServer.md)
Removes an authorization server.


### [Remove-AzureRmApiManagementCertificate](./Remove-AzureRmApiManagementCertificate.md)
Removes an API Management certificate.


### [Remove-AzureRmApiManagementGroup](./Remove-AzureRmApiManagementGroup.md)
Removes an existing API management group.


### [Remove-AzureRmApiManagementLogger](./Remove-AzureRmApiManagementLogger.md)
Removes an API Management Logger.


### [Remove-AzureRmApiManagementOpenIdConnectProvider](./Remove-AzureRmApiManagementOpenIdConnectProvider.md)
Removes an OpenID Connect provider.


### [Remove-AzureRmApiManagementOperation](./Remove-AzureRmApiManagementOperation.md)
Removes an existing operation.


### [Remove-AzureRmApiManagementPolicy](./Remove-AzureRmApiManagementPolicy.md)
Removes the API Management policy from a specified scope.


### [Remove-AzureRmApiManagementProductFromGroup](./Remove-AzureRmApiManagementProductFromGroup.md)
Removes a product from a group.


### [Remove-AzureRmApiManagementProduct](./Remove-AzureRmApiManagementProduct.md)
Removes an existing API Management product.


### [Remove-AzureRmApiManagementProperty](./Remove-AzureRmApiManagementProperty.md)
Removes an API Management Property.


### [Remove-AzureRmApiManagementSubscription](./Remove-AzureRmApiManagementSubscription.md)
Deletes an existing subscription.


### [Remove-AzureRmApiManagementUserFromGroup](./Remove-AzureRmApiManagementUserFromGroup.md)
Removes a user from a group.


### [Remove-AzureRmApiManagementUser](./Remove-AzureRmApiManagementUser.md)
Deletes an existing user.


### [Save-AzureRmApiManagementTenantGitConfiguration](./Save-AzureRmApiManagementTenantGitConfiguration.md)
Saves changes by creating a commit for current configuration.


### [Set-AzureRmApiManagementApi](./Set-AzureRmApiManagementApi.md)
Modifies an API.


### [Set-AzureRmApiManagementAuthorizationServer](./Set-AzureRmApiManagementAuthorizationServer.md)
Modifies an authorization server.


### [Set-AzureRmApiManagementCertificate](./Set-AzureRmApiManagementCertificate.md)
Modifies an API Management certificate.


### [Set-AzureRmApiManagementGroup](./Set-AzureRmApiManagementGroup.md)
Configures an API management group.


### [Set-AzureRmApiManagementLogger](./Set-AzureRmApiManagementLogger.md)
Modifies an API Management Logger.


### [Set-AzureRmApiManagementOpenIdConnectProvider](./Set-AzureRmApiManagementOpenIdConnectProvider.md)
Modifies an OpenID Connect provider.


### [Set-AzureRmApiManagementOperation](./Set-AzureRmApiManagementOperation.md)
Sets API operation details.


### [Set-AzureRmApiManagementPolicy](./Set-AzureRmApiManagementPolicy.md)
Sets the specified scope policy for API Management.


### [Set-AzureRmApiManagementProduct](./Set-AzureRmApiManagementProduct.md)
Sets the API Management product details.


### [Set-AzureRmApiManagementProperty](./Set-AzureRmApiManagementProperty.md)
Modifies an API Management Property.


### [Set-AzureRmApiManagementSubscription](./Set-AzureRmApiManagementSubscription.md)
Sets existing subscription details.


### [Set-AzureRmApiManagementTenantAccess](./Set-AzureRmApiManagementTenantAccess.md)
Enables or disables tenant access.


### [Set-AzureRmApiManagementUser](./Set-AzureRmApiManagementUser.md)
Sets user details.



